# SLAM-PBL-2024-25

./: .gitignore  Dockerfile  README.md  TO_DO  frames_2024-12-08_15.36.14.gv  nav2_test.py  ps3_teleop.yaml  ros_entrypoint.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pbl_bringup/share/pbl_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pbl_description/share/pbl_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
log/: latest_build  latest_list
models/Salamanca/stl/: wheel mount adapter v14.stl
models/Salamanca/urdf/: mobile_base.urdf.xacro  salamanca.urdf.xacro
models/src/salamanca/: CMakeLists.txt  package.xml
models/src/salamanca/urdf/: mobile_base.urdf.xacro
realsense/: Dockerfile  README.md  realsense_node.py
src/: keyboard.py  main.py  realsense.py
src/pbl_bringup/: CMakeLists.txt  package.xml
src/pbl_bringup/launch/: pbl_bringup.launch.xml
src/pbl_bringup/worlds/: pbl_world.world
src/pbl_description/: CMakeLists.txt  package.xml
src/pbl_description/launch/: pbl_salamanca_display.launch.xml
src/pbl_description/rviz/: pbl_rviz_config.rviz
src/pbl_description/stl/: JetsonXavier_mount_corrected v4.stl  Realsens adapter v3.stl  dystans v1.stl  lidar mount znowu v8.stl  odrive s1 mount v6.stl
src/pbl_description/urdf/: mobile_base.urdf.xacro  mobile_base_gazebo.xacro  salamanca.urdf.xacro
(+98 files in other folders)
